--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.12"
 dependencies = [
     "icecream>=2.1.3",
     "numpy>=2.1.2",
+    "pytest>=8.3.3",
     "tiktoken>=0.8.0",
     "tinygrad",
 ]
