--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,10 @@ tinygrad = { git = "https://github.com/tinygrad/tinygrad.git" }
 venv = ".venv"
 venvPath = "."
 typeCheckingMode = "off"
+
+[tool.ruff]
+indent-width = 4
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "W", "B"]
+ignore = ["E501"]
