rename package and add wandb

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "tiny-gpt2"
+name = "tadam"
 version = "0.1.0"
 description = ""
 readme = "README.md"
-authors = [{ name = "Ted", email = "oancea.tudor@icloud.com" }]
+authors = [{ name = "Tudor Oancea", email = "oancea.tudor@icloud.com" }]
 requires-python = ">=3.12"
 dependencies = [
     "icecream>=2.1.3",
@@ -12,12 +12,13 @@ dependencies = [
     "requests>=2.32.3",
     "tiktoken>=0.8.0",
     "tinygrad==0.10.0",
+    "wandb>=0.18.7",
 ]
 
 [project.scripts]
-download_dataset = "tiny_gpt2.main:download_dataset"
-train = "tiny_gpt2.main:train"
-inference = "tiny_gpt2.main:inference"
+download_dataset = "tadam.main:download_dataset"
+train = "tadam.main:train"
+inference = "tadam.main:inference"
 
 [build-system]
 requires = ["hatchling"]
