--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [{ name = "Tudor Oancea", email = "oancea.tudor@icloud.com" }]
 requires-python = ">=3.12"
 dependencies = [
     "icecream>=2.1.3",
+    "matplotlib>=3.9.3",
     "numpy>=2.1.2",
     "pytest>=8.3.3",
     "requests>=2.32.3",
