--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "icecream>=2.1.3",
     "matplotlib>=3.9.3",
     "numpy>=2.1.2",
+    "pyqt6>=6.8.0",
     "pytest>=8.3.3",
     "requests>=2.32.3",
     "tiktoken>=0.8.0",
@@ -29,6 +30,7 @@ beam_char = "tadam.main_char:beam"
 train_char = "tadam.main_char:train"
 inference_char = "tadam.main_char:inference"
 naive_inference_char = "tadam.main_char:naive_inference"
+analyze_grads_char = "tadam.main_char:analyze_grads"
 
 [build-system]
 requires = ["hatchling"]
